// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination snpashot tests renders correctly with page that is last page of slide should render next slide 1`] = `
<Fragment>
   
  <div>
    <button
      data-testid="back"
      onClick={[Function]}
    >
      prev
    </button>
    <ul>
      <li
        $isSelected={true}
        data-testid="5"
        key="5"
        onClick={[Function]}
      >
        5
      </li>
      <li
        $isSelected={false}
        data-testid="6"
        key="6"
        onClick={[Function]}
      >
        6
      </li>
      <li
        $isSelected={false}
        data-testid="7"
        key="7"
        onClick={[Function]}
      >
        7
      </li>
      <li
        $isSelected={false}
        data-testid="8"
        key="8"
        onClick={[Function]}
      >
        8
      </li>
      <li
        $isSelected={false}
        data-testid="9"
        key="9"
        onClick={[Function]}
      >
        9
      </li>
      <li
        $isSelected={false}
        data-testid="10"
        key="10"
        onClick={[Function]}
      >
        10
      </li>
    </ul>
    <button
      data-testid="next"
      onClick={[Function]}
    >
      next
    </button>
  </div>
   
</Fragment>
`;

exports[`Pagination snpashot tests renders correctly with pages 1`] = `
<Fragment>
   
  <div>
    <ul>
      <li
        $isSelected={true}
        data-testid="1"
        key="1"
        onClick={[Function]}
      >
        1
      </li>
      <li
        $isSelected={false}
        data-testid="2"
        key="2"
        onClick={[Function]}
      >
        2
      </li>
      <li
        $isSelected={false}
        data-testid="3"
        key="3"
        onClick={[Function]}
      >
        3
      </li>
      <li
        $isSelected={false}
        data-testid="4"
        key="4"
        onClick={[Function]}
      >
        4
      </li>
      <li
        $isSelected={false}
        data-testid="5"
        key="5"
        onClick={[Function]}
      >
        5
      </li>
    </ul>
    <button
      data-testid="next"
      onClick={[Function]}
    >
      next
    </button>
  </div>
   
</Fragment>
`;

exports[`Pagination snpashot tests renders correctly with pages at last page 1`] = `
<Fragment>
   
  <div>
    <button
      data-testid="back"
      onClick={[Function]}
    >
      prev
    </button>
    <ul>
      <li
        $isSelected={false}
        data-testid="1"
        key="1"
        onClick={[Function]}
      >
        1
      </li>
      <li
        $isSelected={false}
        data-testid="2"
        key="2"
        onClick={[Function]}
      >
        2
      </li>
      <li
        $isSelected={false}
        data-testid="3"
        key="3"
        onClick={[Function]}
      >
        3
      </li>
      <li
        $isSelected={true}
        data-testid="4"
        key="4"
        onClick={[Function]}
      >
        4
      </li>
    </ul>
  </div>
   
</Fragment>
`;

exports[`Pagination snpashot tests renders correctly with pages at page 2 and back button 1`] = `
<Fragment>
   
  <div>
    <button
      data-testid="back"
      onClick={[Function]}
    >
      prev
    </button>
    <ul>
      <li
        $isSelected={false}
        data-testid="1"
        key="1"
        onClick={[Function]}
      >
        1
      </li>
      <li
        $isSelected={true}
        data-testid="2"
        key="2"
        onClick={[Function]}
      >
        2
      </li>
      <li
        $isSelected={false}
        data-testid="3"
        key="3"
        onClick={[Function]}
      >
        3
      </li>
      <li
        $isSelected={false}
        data-testid="4"
        key="4"
        onClick={[Function]}
      >
        4
      </li>
      <li
        $isSelected={false}
        data-testid="5"
        key="5"
        onClick={[Function]}
      >
        5
      </li>
    </ul>
    <button
      data-testid="next"
      onClick={[Function]}
    >
      next
    </button>
  </div>
   
</Fragment>
`;

exports[`Pagination snpashot tests renders correctly without pages 1`] = `
<Fragment>
   
   
</Fragment>
`;
